--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
   },
   "plugins": ["@typescript-eslint", "react"],
   "rules": {
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "react/prop-types": "off"
+    }
   }
 }
