--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
-    "@netlify/blobs": "^6.5.0",
-    "@netlify/edge-functions": "^2.3.1",
-    "@netlify/functions": "^2.6.0",
-    "next": "^14.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@netlify/blobs": "^10.4.3",
+    "@netlify/edge-functions": "^3.0.3",
+    "@netlify/functions": "^5.1.1",
+    "next": "^16.0.8",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "water.css": "^2.1.1"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.0.0-rc.4",
-    "@types/node": "^18.11.5",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@netlify/plugin-nextjs": "^5.15.1",
+    "@types/node": "^25.0.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.0",
-    "prettier": "^3.2.5",
-    "typescript": "^4.8.4"
+    "eslint-plugin-react": "^7.37.5",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3"
   }
 }
